--- a/backend/package.json
+++ b/backend/package.json
@@ -28,9 +28,11 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@types/cookie-parser": "^1.4.10",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "cookie-parser": "^1.4.7",
     "ioredis": "^5.9.3",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.17.1",
